添加了阅读题中的分组题

--- a/src/app/assignment/question-group-list/question-group-detail/tpo-listening-question-detail/tpo-listening-question-detail.component.css
+++ b/src/app/assignment/question-group-list/question-group-detail/tpo-listening-question-detail/tpo-listening-question-detail.component.css
@@ -67,3 +67,14 @@ mat-radio-button p{
     height: 100vh;
     overflow: scroll;
 }
+
+ul{
+    list-style: none;
+    padding-left: 20px;
+    margin: 0;
+}
+
+li{
+    margin: 20px 0;
+    font-size: inherit;
+}
