--- a/src/app/edit-assignment/edit-question-list/tpo-listening-item/tpo-listening-item.component.html
+++ b/src/app/edit-assignment/edit-question-list/tpo-listening-item/tpo-listening-item.component.html
@@ -15,11 +15,11 @@
     <div class="question-item" *ngFor="let question of questionList">
         <div *ngIf="question.questionType !=='tpo_listening_table_choice'">
             <h4>{{question.question}}</h4>
-            <mat-list fxLayout="column" fxLayoutGap="5px">
-                <mat-list-item *ngFor="let option of question.options; let i = index">
+            <ul fxLayout="column" fxLayoutGap="5px">
+                <li *ngFor="let option of question.options; let i = index">
                     {{i|convert09ToAZ}}. {{option}}
-                </mat-list-item>
-            </mat-list>
+                </li>
+            </ul>
             <p class="answer">答案：{{question.answer}}</p>
 
             <div class="buttons" fxLayout="row" fxLayoutGap="15px">
