--- a/src/app/edit-assignment/dialogs/edit-tpo-reading-question-dialog/edit-tpo-reading-question-dialog.component.html
+++ b/src/app/edit-assignment/dialogs/edit-tpo-reading-question-dialog/edit-tpo-reading-question-dialog.component.html
@@ -8,7 +8,10 @@
         </mat-input-container>
 
         <mat-input-container>
-            <input matInput name="question" type="text" required [(ngModel)]="question.question" placeholder="题目">
+            <input *ngIf="question.questionType !=='tpo_reading_category_type'" matInput name="question" type="text" required
+                   [(ngModel)]="question.question" placeholder="题目">
+            <input *ngIf="question.questionType =='tpo_reading_category_type'" matInput name="question" type="text" required
+                   [(ngModel)]="questionForCategory" placeholder="题目">
         </mat-input-container>
 
         <mat-form-field>
@@ -17,32 +20,74 @@
                 <mat-option [value]="assignmentService.getTPOReadingInsertChoice()">插入题</mat-option>
                 <mat-option [value]="assignmentService.getTPOReadingTopic()">主旨题</mat-option>
                 <mat-option [value]="assignmentService.getTPOReadingMultipleChoice()">多选题</mat-option>
+                <mat-option [value]="assignmentService.getTPOReadingCategoryType()">分组题</mat-option>
             </mat-select>
         </mat-form-field>
 
-        <mat-input-container>
-            <input matInput name="option1" type="text" required [(ngModel)]="question.options[0]" placeholder="选项A">
-        </mat-input-container>
+        <div [ngSwitch]="question.questionType">
+            <div *ngSwitchCase="'tpo_reading_category_type'">
+                <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+                    <mat-input-container>
+                        <input matInput name="row" type="number" required
+                               (change)="initCategoryList(f.value.row)"
+                               [(ngModel)]="categoryLength" placeholder="分组的数量">
+                    </mat-input-container>
 
-        <mat-input-container>
-            <input matInput name="option2" type="text" required [(ngModel)]="question.options[1]" placeholder="选项B">
-        </mat-input-container>
+                    <mat-input-container>
+                        <input matInput name="column" type="number" required
+                               (change)="initCategoryOptions(f.value.column)"
+                               [(ngModel)]="optionsLength"
+                               placeholder="选项个数">
+                    </mat-input-container>
+                </div>
 
-        <mat-input-container>
-            <input matInput name="option3" type="text" required [(ngModel)]="question.options[2]" placeholder="选项C">
-        </mat-input-container>
+                <div fxLayout="column">
+                    <mat-input-container
+                            *ngFor="let category of categoryList;let i = index;trackBy:trackByIndex">
+                        <input matInput type="text" required
+                               name="category{{i}}"
+                               placeholder="分组{{i+1}}"
+                               [(ngModel)]="categoryList[i]">
+                    </mat-input-container>
+                </div>
 
-        <mat-input-container>
-            <input matInput name="option4" type="text" required [(ngModel)]="question.options[3]" placeholder="选项D">
-        </mat-input-container>
+                <div fxLayout="column">
+                    <mat-input-container *ngFor="let option of question.options;
+                    let i = index;trackBy:trackByIndex">
+                        <input matInput type="text" required
+                               name="categoryOption{{i}}"
+                               placeholder="选项{{i+1}}"
+                               [(ngModel)]="question.options[i]">
+                    </mat-input-container>
+                </div>
+            </div>
 
-        <mat-input-container *ngIf="question.questionType == 'tpo_reading_topic'">
-            <input matInput name="option5" type="text" required [(ngModel)]="question.options[4]" placeholder="选项E">
-        </mat-input-container>
+            <div *ngSwitchDefault>
+                <mat-input-container>
+                    <input matInput name="option1" type="text" required [(ngModel)]="question.options[0]" placeholder="选项A">
+                </mat-input-container>
 
-        <mat-input-container *ngIf="question.questionType == 'tpo_reading_topic'">
-            <input matInput name="option6" type="text" required [(ngModel)]="question.options[5]" placeholder="选项F">
-        </mat-input-container>
+                <mat-input-container>
+                    <input matInput name="option2" type="text" required [(ngModel)]="question.options[1]" placeholder="选项B">
+                </mat-input-container>
+
+                <mat-input-container>
+                    <input matInput name="option3" type="text" required [(ngModel)]="question.options[2]" placeholder="选项C">
+                </mat-input-container>
+
+                <mat-input-container>
+                    <input matInput name="option4" type="text" required [(ngModel)]="question.options[3]" placeholder="选项D">
+                </mat-input-container>
+
+                <mat-input-container *ngIf="question.questionType == 'tpo_reading_topic'">
+                    <input matInput name="option5" type="text" required [(ngModel)]="question.options[4]" placeholder="选项E">
+                </mat-input-container>
+
+                <mat-input-container *ngIf="question.questionType == 'tpo_reading_topic'">
+                    <input matInput name="option6" type="text" required [(ngModel)]="question.options[5]" placeholder="选项F">
+                </mat-input-container>
+            </div>
+        </div>
 
         <mat-input-container>
             <input matInput name="answer" type="text" required [(ngModel)]="question.answer" placeholder="答案">
