编辑作业页面，作业按照名字排序

--- a/src/app/edit-assignment/dialogs/edit-tpo-reading-question-dialog/edit-tpo-reading-question-dialog.component.html
+++ b/src/app/edit-assignment/dialogs/edit-tpo-reading-question-dialog/edit-tpo-reading-question-dialog.component.html
@@ -62,7 +62,7 @@
                 </div>
             </div>
 
-            <div *ngSwitchDefault>
+            <div *ngSwitchDefault fxLayout="column">
                 <mat-input-container>
                     <input matInput name="option1" type="text" required [(ngModel)]="question.options[0]" placeholder="选项A">
                 </mat-input-container>
