--- a/src/app/index/account/login/login.component.html
+++ b/src/app/index/account/login/login.component.html
@@ -79,5 +79,5 @@
 
 <div class="footer">
   <span>© 2018 琢玉</span>
-  <a href="http://www.miibeian.gov.cn">粤ICP备18012887号</a>
+  <a href="https://www.miibeian.gov.cn">粤ICP备18012887号</a>
 </div>
