--- a/src/app/index/course/course-list/course-list.component.html
+++ b/src/app/index/course/course-list/course-list.component.html
@@ -14,11 +14,6 @@
         <small>更多<i class="icon ion-ios-arrow-down"></i></small>
       </p>
     </a>
-    <!--<a fxLayoutAlign="center" *ngIf="courseItemList && !loading && !canShowMore()" disabled="disabled">-->
-      <!--<p class="more-info">-->
-        <!--<small>已经没有更多班级</small>-->
-      <!--</p>-->
-    <!--</a>-->
     <a fxLayoutAlign="center" *ngIf="loading">
       <p class="more-info">
         <small>读取数据中</small>
@@ -27,6 +22,6 @@
   </div>
 </div>
 
-<h5 *ngIf="courseItemList && courseItemList.length == 0">
+<h5 *ngIf="!loading && courseItemList && courseItemList.length == 0">
   你还没有加入任何班级，可以尝试搜索班级加入
 </h5>
