添加班级的资源模块

--- a/src/app/shared/view/navbar/class-detail-nav/class-detail-nav.component.html
+++ b/src/app/shared/view/navbar/class-detail-nav/class-detail-nav.component.html
@@ -9,7 +9,7 @@
 
     <span class="nav-button" routerLink="/class/{{classId}}/d" routerLinkActive="selected">班级</span>
     <span class="nav-button" routerLink="/class/{{classId}}/a" routerLinkActive="selected">作业</span>
-    <!--<span class="nav-button" routerLink="/class/{{classId}}/r" routerLinkActive="selected">资源</span>-->
+    <span class="nav-button" routerLink="/class/{{classId}}/r" routerLinkActive="selected">资源</span>
 
   </div>
 
